k8s/base/plantsuite/dashboards/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboards
spec:
  template:
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - dashboards
      containers:
        - name: dashboards
          image: plantsuite.azurecr.io/plantsuite-dashboards:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 512Mi
          startupProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 15
            timeoutSeconds: 3
            periodSeconds: 3
            successThreshold: 1
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 3
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 3
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 5
          volumeMounts:
            - name: appsettings
              readOnly: true
              mountPath: /app/appsettings.json
              subPath: appsettings.json
            - name: license
              readOnly: true
              mountPath: /etc/plantsuite
            - name: ca-certificates
              mountPath: /etc/ssl/certs/ca-certificates.crt
              subPath: ca.crt
              readOnly: true
      volumes:
        - name: appsettings
          configMap:
            name: dashboards-appsettings
            items:
              - key: appsettings.json
                path: appsettings.json
        - name: license
          secret:
            secretName: plantsuite-license
            items:
              - key: license.crt
                path: license.crt
        - name: ca-certificates
          secret:
            secretName: ca-certificates
            items:
              - key: ca.crt
                path: ca.crt
      imagePullSecrets:
        - name: plantsuite-cr
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
