k8s/base/plantsuite/dashboards/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboards
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
