k8s/base/plantsuite/dashboards/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: dashboards
spec:
  hosts:
    - dashboards.plantsuite.local
  gateways:
    - istio-ingress/gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 8080
            host: dashboards
